Contract Configurator 1.6.6
- Fixed exception in Science sub-system (happens in latest FieldResearch release).

Contract Configurator 1.6.5
- Fix some parsing issues with the Duration class (thanks Nori).
- Re-did fix to exception in ContractVesselTracker.
- Fixed rare exception when removing a planet pack (thanks AlonzoTG).
- Added support in SpawnVessel for spawning a vessel from a single part (a bit buggy, read caveats in documentation).
- Improved SpawnVessel validation (thanks 5thHorseman).
- Fixed issues with parsing identifiers with trailing spaces (thanks 5thHorseman).
- Minor bug fixes.

Contract Configurator 1.6.4
- Workaround for crash issue when parsing some ternary expressions in contracts.
- ContractPreLoader improvements, better handling of autoAccept contracts (thanks NathanKell).
- Check parameter state for some parameters on contract acceptance (fixes issues with CapCom and autoAccept contracts).
- Contract Configurator now automatically reloaded when doing a module manager reload (thanks sarbian).
- Enhancements to ExperimentalPart to allow finer control over when parts are locked/unlocked.
- Fixes to some string expression parsing issues (thanks Nori).
- Fixed exception in ContractVesselTracker (thanks glilienthal).
- Minor bug fixes.

Contract Configurator 1.6.3
- New Tech methods Parents() and IsReadyToUnlock().

Contract Configurator 1.6.2
- Fixed issue with saving contract settings (thanks rasta013).

Contract Configurator 1.6.1
- Fixed a major bug that prevented VesselParameterGroup parameters from completing in some circumstances (thanks ola).

Contract Configurator 1.6.0
- New settings window (only available in space center) that allows contract packs to be enabled/disabled per save.  Also supports disabling of stock contract types.
- Support for DATA nodes within CONTRACT_GROUP (allows defining an expression once and using it in multiple contracts).
- Added displayName to CONTRACT_GROUP.